# learning-pyxel

./: .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  github_collaboration.yaml  new_documentation.yaml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/Rulesets/: default.json
.github/actions/setup-submodules/: action.yaml
.github/instructions/: 00-hard-rules.instructions.md  config-secrets.instructions.md  logging.instructions.md  python-standards.instructions.md  pyxel-standards.instructions.md  quality-gates.instructions.md  tests-fixtures-and-tmp_path.instructions.md  tests-tdd.instructions.md
.github/workflows/: ci.yaml
pyxel_examples/: 02_jump_game.py  03_draw_api.py  04_sound_api.py  07_snake.py  09_shooter.py  10_platformer.py  11_offscreen.py  14_synthesizer.py  15_tiled_map_file.py  17_app_launcher.py
pyxel_examples/assets/: audio_bgm.pyxpal
scripts/: smart-pytest.sh
src/: 01_simple_app.py  02_simple_app_wrapped.py  03_input_key_left_right_up_down.py
tests/: test_dummy.py
